mcww_web/css/patches.css
/* Gradio fixes */

:root:has(body:not(.dark)) { /* fixes gradio bug browser doesn't detect dark theme */
    color-scheme: light;
}
:root:has(body.dark) {
    color-scheme: dark;
}

:root { /* fixes non desirable scrolling */
    overscroll-behavior-y: none;
}
main {
    overflow-x: hidden;
}

main { /* Offline fonts instead of google fonts; the fonts are in mcww_web/fonts */
    font-family: 'Source Sans Pro', ui-sans-serif, system-ui, sans-serif, 'Noto Sans Symbols 2' !important;
}

.row:not(:has(*)) { /* Fixes gradio bug where there are gaps of empty row */
    display: none;
}

.wrap:has(>.clear-status):has(>.error) { /* Fixes gradio bug where randomly appears this overlay */
    display: none;
}


/* Browser defaults overrides */

:root {
    --scrollbar-width: 3px;
    --scrollbar-track-color: color-mix(in srgb, var(--neutral-100), transparent 75%);
    --scrollbar-thumb-color: color-mix(in srgb, var(--neutral-500), transparent 75%);
    --scrollbar-thumb-color-hover: color-mix(in srgb, var(--neutral-500), transparent 65%);
}
body.dark {
    --scrollbar-track-color: color-mix(in srgb, var(--neutral-900), transparent 80%);
    --scrollbar-thumb-color: color-mix(in srgb, var(--neutral-600), transparent 85%);
    --scrollbar-thumb-color-hover: color-mix(in srgb, var(--neutral-600), transparent 75%);
}
body.mcww-theme-flag-thick-scrollbars {
    --scrollbar-width: 10px;
}

:root, * {
    &::-webkit-scrollbar {
        width: var(--scrollbar-width);
        height: var(--scrollbar-width);
        background: var(--scrollbar-track-color);
    }
    &::-webkit-scrollbar-track {
        background: var(--scrollbar-track-color);
    }
    &::-webkit-scrollbar-thumb {
        background: var(--scrollbar-thumb-color);
    }
    &::-webkit-scrollbar-thumb:hover {
        background: var(--scrollbar-thumb-color-hover);
    }
    &::-webkit-scrollbar-corner {
        background: transparent;
    }
}

:root, * {
    -webkit-tap-highlight-color: transparent;
}

body::selection {
    color: var(--body-text-color);
    text-shadow: none;
    background: #dbdbdb;
}
body.dark::selection {
    background: #787878;
}

*:focus {
    outline: none;
}


/* Gradio defaults overrides */

div.html-container {
    margin: 0;
    padding: 0;
    overflow: visible !important;
}
div:has(>div.html-container) {
    overflow: visible !important;
}

main.fillable.app {
    @media (min-width: 690px) {
        max-width: none !important;
        width: 93vw !important;
    }
}

label.disabled:has(>input:disabled) {
    &>*, & {
        cursor: default !important;
    }
    &>input:disabled {
        opacity: 80%;
        &:not(:checked):hover {
            border-color: var(--checkbox-border-color) !important;
            background-color: var(--checkbox-background-color) !important;
        }
    }
}

.slider_input_container>input:disabled {
    cursor: default;
}
.tab-like-container>input:disabled {
    cursor: default;
}

